--- a/apps/RequestType/templates/requiredList.html
+++ b/apps/RequestType/templates/requiredList.html
@@ -52,7 +52,7 @@
                 </div>
                 </td>
                 <td> 
-                <a class="btn btn-primary" href="">Edit</a>
+                <a class="btn btn-primary" href="{%url 'requestType:UpdateRequest' configurations.id%}">Edit</a>
                 <a class="btn btn-danger" href="{%url 'requestType:DeleteRequest' configurations.id%}" >Delete</a>              
                 </td>
             </tr>
