--- a/apps/configurations/templates/base1.html
+++ b/apps/configurations/templates/base1.html
@@ -13,9 +13,7 @@
 
   <title>{% block title %}IPPE aplication{% endblock %}</title>
 
-  <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-  <link href='http://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
-  <link href="{% static 'stacktable.css' %}" rel="stylesheet" />
+
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -32,6 +30,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
   {% endblock %}
 
+  
+  <link href='http://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
+  <link href="{% static 'css/stacktable.css' %}" rel="stylesheet" />
 
 
 </head>
@@ -479,7 +480,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/libs/jquery-1.7.min.js"><\/script>')</script> </script>
 
-  <script src="stacktable.js" type="text/javascript"></script>
+  <script src="{% static 'stacktable.js'%}" type="text/javascript"></script>
 
   <script>
     $(document).on('click', '#run', function(e) {
