--- a/apps/configurations/templates/element_classification_list.html
+++ b/apps/configurations/templates/element_classification_list.html
@@ -16,7 +16,7 @@
 {% if object_list %}
   <div class="card-body">
     <div class="table-responsive">
-      <table class="table table-bordered " id="dataTable" width="10%" cellspacing="3px">
+      <table class="table table-bordered " id="card-table" width="10%" cellspacing="3px">
         <thead>
           <tr>
             <th>#</th>
