--- a/apps/warehouses/templates/warehouses_list.html
+++ b/apps/warehouses/templates/warehouses_list.html
@@ -10,7 +10,7 @@
     {% if object_list %}
     <div class="card-body">
         <div class="table-responsive">
-        <table class="table table-bordered" id="card-table" width="100%" cellspacing="0">
+        <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
             <tr>
                 <th>#</th>
@@ -73,6 +73,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>                
       </div>
       <div class="modal-body">
+        <input checked type="checkbox" id="toggle-check" data-toggle="toggle">
         <p>Do you really want to delete these records? This process cannot be undone.</p>  
 			</div>
 			<div class="modal-footer">
@@ -122,20 +123,23 @@
     </div>
   </div>
 </div>
-{% comment %} Stockists List Modal {% endcomment %}
-<div class="modal fade" id="Modal_list" tabindex="-1" role="dialog" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" >Stockists List</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body" id="stck">
 
-      </div>      
+{% for configurations in object_list %}
+    {% comment %} Stockists List Modal {% endcomment %}
+    <div class="modal fade" id="Modal_list" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" >Stockists List</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            </div>
+            <div class="modal-body" id="stck">
+
+            </div>      
+        </div>
+        </div>
     </div>
-  </div>
-</div>
+{% endfor %} 
 {% endblock%}
