--- a/apps/configurations/templates/element_form.html
+++ b/apps/configurations/templates/element_form.html
@@ -35,6 +35,10 @@
           </div>
         </div>
     </div>
+    <div class="switcher switcher-success">
+        <input type="checkbox" name="switcher_checkbox_2" id="switcher_checkbox_2" checked="" value="1">
+        <label for="switcher_checkbox_2"></label>
+    </div>
     <div class="AdjustForm">
         <button type="submit" class="btn btn-primary" >Save Changes</button>
         <button type="submit" class="btn btn-secondary" formnovalidate name="cancel">Cancel</button>
