--- a/apps/warehouses/templates/warehouses_list.html
+++ b/apps/warehouses/templates/warehouses_list.html
@@ -1,4 +1,9 @@
 {% extends 'base1.html' %}
+{% load static %}
+{% block custom_css %}
+    {{ block.super }}
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet">
+{% endblock custom_css %}
 {% block content %}
 <div class="topButtons ListPosition">
   <a href="{% url 'warehouse_config:warehouse_create'%}" class="btn btn-primary" style="margin:10px">Create Warehouse</a>
